--- a/second.html
+++ b/second.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div class="back-cards">
-  <div class= "back-card"><img src="https://i.pinimg.com/474x/b7/ca/25/b7ca2555825876a8a73756874adfb766.jpg" alt="back-card"></div>
-</div>
+  <ul class="button">
+    <li><a href='second.html'>Welcome</a></li>
+    <li><a href='index.html'>Play game</a></li>
+  </ul>
   <script src="./script.js"></script>
 </body>
 </html>
